test | GIDK-41atuy | Aditi | chat-icon overlapping fixed

--- a/apps/web-giddh/src/app/reports/components/report-table-components/report.table.component.scss
+++ b/apps/web-giddh/src/app/reports/components/report-table-components/report.table.component.scss
@@ -41,6 +41,7 @@
 
 @media screen and (max-width: 768px) {
     .table-responsive {
+        margin-bottom: 50px;
         .giddh-table.on-mobile-view {
             tr {
                 td {
